# clippy-control

./: Cargo.toml  README.md  clippy-control.toml
crates/clippy-control/: Cargo.toml
crates/clippy-control-cli/: Cargo.toml
crates/clippy-control-cli/src/: main.rs
crates/clippy-control/src/: main.rs
