[workspace.package]
description = "Control clippy lints with a configuration file"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Brian Anderson <andersrb@gmail.com>"]
repository = "https://github.com/brson/clippy-control"
edition = "2021"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/clippy-control",
]

[workspace.dependencies]
rmx.path = "../rustmax/crates/rustmax"
rmx.package = "rustmax"
rmx.version = "0.0.3"
rmx.features = [
  "rmx-profile-std",
  "rmx-profile-cli",
  "rmx-feature-derive",
  "rmx-feature-serde",
]
